# quantumgrid

./: .gitignore  DEVELOPMENT_LOG.md  Dockerfile  PROJECT_SPEC.md  README.md  ROADMAP.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  penalty_tuning.py  scaling.py
classical/: __init__.py  baselines.py  milp_solver.py
data/: __init__.py  download_entsoe.py  generators.py  preprocess.py
formulation/: __init__.py  qubo_encoding.py  unit_commitment.py
quantum/: __init__.py  cost_hamiltonian.py  qaoa_solver.py  vqe_solver.py
tests/: test_v100.py  test_v101.py  test_v102.py  test_v103.py  test_v104.py  test_v105.py  test_v106.py  test_v107.py  test_v108.py
visualization/: __init__.py  plots.py
