[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumgrid"
version = "1.0.0"
description = "Quantum-classical hybrid optimization for energy grid unit commitment"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Abdeljalil Jliouat"}]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pennylane>=0.38",
    "ortools>=9.8",
    "matplotlib>=3.7",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]

[tool.setuptools.packages.find]
include = ["data*", "formulation*", "quantum*", "classical*", "benchmarks*", "visualization*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --timeout=120"
